cidemod/jitfailure-dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486/error.log
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp: In member function ‘virtual bool dolfin::dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486::inside(Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, bool) const’:
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp:64:50: error: expected identifier before numeric constant
   64 |          return (x[0]>=-tol && x[0]<=1+tol) || ([0]>=2-tol && x[0]<=3+tol);
      |                                                  ^
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp: In lambda function:
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp:64:52: error: expected ‘{’ before ‘>=’ token
   64 |          return (x[0]>=-tol && x[0]<=1+tol) || ([0]>=2-tol && x[0]<=3+tol);
      |                                                    ^~
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp: In member function ‘virtual bool dolfin::dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486::inside(Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, bool) const’:
/tmp/tmp9twoslr3/dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486.cpp:64:52: error: no match for ‘operator>=’ (operand types are ‘dolfin::dolfin_subdomain_4e7bd205a8c5361148b01e5b2fedd486::inside(Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, bool) const::<lambda()>’ and ‘double’)
   64 |          return (x[0]>=-tol && x[0]<=1+tol) || ([0]>=2-tol && x[0]<=3+tol);
